// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columns Renders \`columns\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      class="widget-settings-item-title"
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          Custom label
        </div>
        <!---->
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <c-columns-field-stub
          value=""
          with-color-indicator="true"
          with-html="true"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`columns Renders \`columns\` with default and required props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      class="widget-settings-item-title"
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          Custom label
        </div>
        <!---->
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <c-columns-field-stub
          value=""
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
